--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
      rel="stylesheet"
      href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.css"
      >
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
